--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project 4</title>
+  <meta name="description" content="This is my about me. Contains some information about myself">
+  <title>About me</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="faviconT.png" sizes="16x16" type="image/png">
