Changed color and Bold sentences

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="This is my personal webpage's homepage. It will connect to other pages about me.">
   <title>My Website</title>
 </head>
 <body>
-  <h1>This is my opening website!</h1>
-  <p><a href="products/single-product.html"> Go to products page!</a></p>
-  <p><a href="contact-me.html">Contact us</a></p>
-  <p><a href="about-me.html">About Me</a></p>
+  <h1 style="color:red;">This is my opening website!</h1>
+  <p><a href="products/single-product.html"><strong> Go to products page!</strong></a></p>
+  <p><a href="contact-me.html"><strong>Contact us</strong></a></p>
+  <p><a href="about-me.html"><strong>About Me</strong></a></p>
 </body>
 </html>
 <!-- partial -->
