--- a/about-me.html
+++ b/about-me.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Project 4 </title>
-  <link rel="stylesheet" href=".css/style.css">
 
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +8,7 @@
   <title>About me</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="faviconT.png" sizes="16x16" type="image/png">
+  <link rel="shortcut icon" href="/media/faviconT.png" sizes="16x16" type="image/png">
 </head>
 
 <body class="wrapper">
